--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <button id='3' onclick='threeHome()'>+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 id='guest' class='score'>0</h2>
                 <button id='1' onclick='oneGuest()'>+1</button>
                 <button id='2' onclick='twoGuest()'>+2</button>
